# 4DGS

./: .gitignore  Ablations.ipynb  Model.typ  Notes.typ  OMNI-4DGS_Report.typ  Plan.typ  README.md  ablation_script.sh  ablations.ipynb  batch_train.py  bibliography.bib  clean_checkpoint.py  code_visualis.ipynb  compress.py  compression_evaluation.ipynb  compression_postprocess.py  export_4dgs_plotly_html.py  guide.md  html_export.py  html_poster.py  interactive_viewer.py  mobile_benchmark.py  mobile_export.py  pyproject.toml  recreate_batch_stats.py  render.py  template.typ  train.py  train_ablations.py  writeup_usplat.patch
arguments/: __init__.py
configs/dnerf/: bouncingballs.yaml  bouncingballs_simple.yaml  hellwarrior.yaml  hellwarrior_prune.yaml  hook.yaml  hook_prune.yaml  jumpingjacks.yaml  jumpingjacks_prune.yaml  lego.yaml  lego_prune.yaml  mutant.yaml  mutant_prune.yaml  notari.yaml  room.yaml  standup.yaml  standup_prune.yaml  trex.yaml  trex_prune.yaml
configs/dnerf_ablation/: README.md  bouncingballs.yaml  hellwarrior.yaml  hook.yaml  jumpingjacks.yaml  lego.yaml  mutant.yaml  notari.yaml  room.yaml  standup.yaml  trex.yaml
configs/dynerf/: coffee_martini.yaml  cook_spinach.yaml  cut_roasted_beef.yaml  flame_salmon.yaml  flame_steak.yaml  sear_steak.yaml
diff-gaussian-rasterization/: pyproject.toml  rasterize_points.cu  rasterize_points.h
diff-gaussian-rasterization-ms-nosorting/: rasterize_points.cu  rasterize_points.h
diff-gaussian-rasterization-ms-nosorting/cuda_rasterizer/: backward.cu  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff-gaussian-rasterization/diff_gaussian_rasterization/: _C.py
gaussian_renderer/: __init__.py  __init__.py.orig  diff_gaussian_rasterization.py  diff_gaussian_rasterization_ms_nosorting.py
pointops2/: pointops2_cuda.py  pyproject.toml
pointops2/functions/: __init__.py  pointops.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: collect_low_psnr_reruns_small.py  fps_profile_ckpts.py  nerfcapture_zip_to_dnerf.py  video_to_4dgs_dataset.py
simple-knn/: pyproject.toml
simple-knn/simple_knn/: _C.py
splat4d/: .gitignore  Cargo.toml  README.md  apply_fixes.py
splat4d/.github/workflows/: ci.yml
splat4d/crates/splat-cli/: Cargo.toml
splat4d/crates/splat-cli/src/: main.rs
splat4d/crates/splat-format/: Cargo.toml
splat4d/crates/splat-format/src/: lib.rs
splat4d/crates/splat-wasm/: Cargo.toml
splat4d/crates/splat-wasm/src/: lib.rs  renderer.rs
splat4d/shaders/: bitonic_sort_pairs.wgsl  clear_instances.wgsl  clear_ranges.wgsl  common.wgsl  composite.wgsl  condition_4d.wgsl  cuda_common.wgsl  duplicate_with_keys.wgsl  identify_tile_ranges.wgsl  opacity_mlp.wgsl  preprocess_sorted.wgsl  present.wgsl  radix_sort_tiles.wgsl  raster_sorted.wgsl  raster_sortfree.wgsl  render_sorted_cuda_parity.wgsl  render_sortfree_cuda_parity.wgsl  scan_step.wgsl  tile_binning.wgsl
splat4d/tools/: export_checkpoint.py
splat4d/web/: main.js  style.css
utils/: checkpoint_utils.py  data_utils.py  dqb.py  general_utils.py  gpcc_utils.py  graph.py  loss_utils.py  mobile_compression.py  uncertainty.py  usplat_losses.py  usplay_losses.py
writeup/: 0. proposal.typ  1. presentation.typ  2. OMNI-4DGS Poster.typ  3. OMNI-4DGS_Report.typ  OMNI-4DGS_Report.typ  appendix.typ  bibliography.bib  bouncingballs_usplat_7k_ablation_table.typ  code_visualis.ipynb  ieee.csl  presentation.typ  template.typ  trex_usplat_7k_ablation_table.typ
writeup/img/: diagram.typ
