[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "four-d-gaussian-splatting"
version = "0.1.0"
description = "4D Gaussian Splatting with JIT-built CUDA extensions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.10",
  "torchvision",
  "plyfile==0.8.1",
  "tqdm==4.66.1",
  "torchmetrics==0.11.4",
  "imagesize==1.4.1",
  "kornia==0.6.12",
  "omegaconf==2.3.0",
  "simple-knn",
  "pointops2",
  "diff-gaussian-rasterization",
  "tensorboard>=2.20.0",
  "imageio[ffmpeg]>=2.37.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arguments*", "gaussian_renderer*", "lpipsPyTorch*", "scene*", "utils*"]

[tool.uv.sources]
simple-knn = { path = "simple-knn", editable = true }
pointops2 = { path = "pointops2", editable = true }
diff-gaussian-rasterization = { path = "diff-gaussian-rasterization", editable = true }
