[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "four-d-gaussian-splatting"
version = "0.1.0"
description = "4D Gaussian Splatting with JIT-built CUDA extensions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.10",
  "torchvision",
  "plyfile==0.8.1",
  "tqdm==4.66.3",
  "torchmetrics==1.9.0",
  "imagesize==1.4.1",
  "kornia==0.6.12",
  "omegaconf==2.3.0",
  "diff-gaussian-rasterization",
  "tensorboard>=2.20.0",
  "imageio[ffmpeg]>=2.37.3",
  "pointops2",
  "simple-knn",
  "dahuffman>=0.4.2",
  "ipykernel>=7.2.0",
  "pandas>=3.0.2",
  "matplotlib>=3.10.9",
  "plotly>=6.7.0",
  "nbformat>=5.10.4",
  "opencv-python-headless>=4.13.0.92",
  "squarify>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arguments*", "externals*", "gaussian_renderer*", "scene*", "utils*"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.uv.sources]
diff-gaussian-rasterization = { path = "diff-gaussian-rasterization", editable = true }
pointops2 = { workspace = true }
simple-knn = { workspace = true }

[tool.uv.workspace]
members = [
    "pointops2",
    "simple-knn",
]
