[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-gaussian-rasterization"
version = "0.1.0"
description = "JIT-built diff-gaussian-rasterization CUDA extension"
requires-python = ">=3.10"
dependencies = ["torch>=2.10"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["diff_gaussian_rasterization*"]
