[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointops2"
version = "1.0.0"
description = "JIT-built pointops2 CUDA extension"
requires-python = ">=3.10"
dependencies = ["torch>=2.10", "numpy"]

[tool.setuptools]
include-package-data = true
py-modules = ["pointops2_cuda"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pointops2*"]
