[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-knn"
version = "0.1.0"
description = "JIT-built simple-knn CUDA extension"
requires-python = ">=3.10"
dependencies = ["torch>=2.10"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_knn*"]
